--- a/src/index.css
+++ b/src/index.css
@@ -254,9 +254,13 @@ button:hover {
   flex-direction: row;
 }
 
+.Counter_buttons {
+  margin-top: 0.5rem ;
+}
+
 .ColorPicker_button {
   cursor: pointer;
-  margin-left: .5rem;
+  margin: .5rem;
 }
 
 .itemList__shadow-inset {
